2011-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed result assignment bug in addition.

2011-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c,
	  src/z80/ralloc.c,
	  src/z80/main.c,
	  src/z80/z80.h:
	  Added --optralloc-remat option for handling rematerialization in the new allocator,
	  fixed cost function bug when reading beyond the size of operands,
	  removed option for the use of an exact cost function and made the exact cost function the default,
	  improved code generation for addition.

2011-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed a bug triggered by assigning rematerializeable variables to register A or IY.

2011-04-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed bug in bitfield reading that occoured when reading from (HL) and writing the result to L.

2011-04-15 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.
	
2011-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-13 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Some optimizations for using a pointer to a bitfield in iy,
	  improve pushing of 4-byte parameters.

2011-04-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/z80/gen.c:
	  Fixed genAssign to be able to handle arbitrary register-to-register assignments.

2011-04-11 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Fixed another genPointerGet() bug.

2011-04-10 Borut Razem <borut.razem AT gmail.com>
