@@ -1,5 +1,10 @@
 2011-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/z80/peeph-z80.def:
+	  Added some peephole rules to better optimize shifting and dead loads.
+
+2011-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* Merge everything except src/z80/gen.c from trunk.
 
 2011-04-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
